Changes for 1.1beta2:

 - improved support of proc.num[process,<user name>] (Eugene)
 - added columns alerts.[triggerid,repeats,maxrepeats,nextcheck,delay] (Alexei)
 - added columns alerts.[triggerid,repeats,maxrepeats,nextcheck] (Alexei)
 - fixed compilation issues under FreeBSD (Alexei)
 - fixed compilation of hstrerror() under misc platforms (Alexei)
 - fixed compilation issues of Unix agent on non-Linux platforms (Alexei)
 - added support of autoregistration of new hosts (Alexei)
 - fixed "Add items from template" functionality (Alexei)
 - do not show deleted hosts in host selection (Alexei)
 - fixed crash of zabbix_sender (Alexei)
 - added new table autoreg (Alexei)
 - added support of vfs.file.regmatch[] and vfs.file.regexp[] (Alexei)
 - added mass-delete function for IT Services (Alexei)
 - fixed compilation of LDAP functionality (Alexei)
 - new parameter for zabbix_agentd, show list of supported parameters (Alexei)
 - added path to SNMP headers in Makefiles (Alexei)

Changes for 1.1beta1:

 - fixed never logout option (Alexei)
 - support of function fuzzytime(). Thanks to James Wells. (Alexei)
 - added menu structure for configuration management (Alexei)
 - added support of macros $1,..., $9 (Alexei)
 - added support for dns[ip,domain] (Alexei)
 - added screen Host Profiles (Alexei)
 - new server configuration parameter DBPort (Alexei)
 - added column triggers.error (Alexei)
 - added error reason if trigger is in UNKNOWN state (Alexei)
 - added column items.logtimefmt (Alexei)
 - added support of timestamp format for log files (Alexei)
 - all network load related metrics renamed to net.if.xxx (Alexei)
 - all swap-related metrics renamed to system.swap.xxx (Alexei)
 - all CPU-related metrics renamed to system.cpu.xxx (Alexei)
 - misc fixes for host-templates linkage (Alexei)
 - fixed addition of triggers to linked hosts (Alexei)
 - group functions for item manipulations (Alexei)
 - changes umask(0) to umask(022) to prevent world-wrtie access (Alexei)