@@ -209,6 +209,8 @@ CREATE TABLE actions (
   message		blob		DEFAULT '' NOT NULL,
   nextcheck		int(4)		DEFAULT '0' NOT NULL,
   recipient		int(1)		DEFAULT '0' NOT NULL,
+  maxrepeats		int(4)		DEFAULT '0' NOT NULL,
+  repeatdelay		int(4)		DEFAULT '600' NOT NULL,
   PRIMARY KEY (actionid),
   KEY (triggerid)
 ) type=InnoDB;
