@@ -1,5 +1,6 @@
 Changes for 1.1beta2:
 
+ - added columns actions.maxrepeats, actions.repeatdelay (Alexei)
  - improved support of proc.num[process,<user name>] (Eugene)
  - added columns alerts.[triggerid,repeats,maxrepeats,nextcheck,delay] (Alexei)
  - added columns alerts.[triggerid,repeats,maxrepeats,nextcheck] (Alexei)
